--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.FinalOutput"
         tools:targetApi="31">
         <activity
+            android:name=".pending_appointment"
+            android:exported="false" />
+        <activity
+            android:name=".item_appointment"
+            android:exported="false" />
+        <activity
+            android:name=".Appointment"
+            android:exported="false" />
+        <activity
+            android:name=".appointments"
+            android:exported="false" />
+        <activity
             android:name=".p_dashboard"
             android:exported="false" />
         <activity
