--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,30 @@
         android:theme="@style/Theme.FinalOutput"
         tools:targetApi="31">
         <activity
+            android:name=".DefaultDashboard"
+            android:exported="false" />
+        <activity
+            android:name=".AdminDashboard"
+            android:exported="false" />
+        <activity
+            android:name=".NurseDashboard"
+            android:exported="false" />
+        <activity
+            android:name=".DoctorDashboard"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".booking" -->
+        <!-- android:exported="false" /> -->
+        <activity
             android:name=".pending_appointment"
             android:exported="false" />
         <activity
             android:name=".item_appointment"
-            android:exported="false" />
-        <activity
-            android:name=".Appointment"
-            android:exported="false" />
-        <activity
-            android:name=".appointments"
-            android:exported="false" />
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".Appointment" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity -->
+        <!-- android:name=".appointments" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".p_dashboard"
             android:exported="false" />
@@ -45,6 +58,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+
     </application>
 
 </manifest>
