--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.FinalOutput"
         tools:targetApi="31">
         <activity
+            android:name=".doctor_card"
+            android:exported="false" />
+        <activity
+            android:name=".doctor_list"
+            android:exported="false" />
+        <activity
             android:name=".pending_appointment"
             android:exported="false" />
         <activity
